﻿Sigil v0.2.0 RC1 ADD_DATE
    - fixed an issue with positive regex lookaheads in normal Replace (not ReplaceAll) (issue #261) 
    - fixed a rare off-by-one error in Book View searching when the caret was at the start of
    the matched string; this made the search skip that instance of the match (issue #280)
    - fixed an issue with the Find Dialog not correctly scrolling to the found text in
    Book View (issue #195)
    - fixed an issue with Tidy not fixing free ampersands into "&amp;", even when configured
    to do so (issue #365)
    - fixed an issue with the current tab unnecessarily reloading after book saves (issue #354)
    - fixed issues with filename basenames being read only until the first dot; was causing
    problems with OPF manifest ID generation (issue #351)
    - hitting the keyboard shortcut for the Find&Replace window while the window is open
    now switches focus to that window (issue #362)
    - fixed an issue with the applied headings not "sticking" and not showing up in the TOC
    editor (issue #300)
    - the special iPad- and Calibre-friendly cover meta tag information is now preserved
    after loading
    - added a new "Cover Image" entry for image resource in the "Add Semantics" Book Browser menu  
    - if an image is not set as a cover image manually, Sigil now uses heuristics on save
    to determine if the epub has a cover image
    - if an epub has an image set as a cover image, Sigil will now write a special meta tag
    that identifies this image in the OPF; this tag is then used by the iPad (and Calibre)
    for the book cover, for instance
    - all OPF <guide> element information when loading epubs is now preserved
    - added a new "Add Semantics" menu for XHTML documents; it can be used to mark XHTMLs as
    "Dedication", "Colophon", "Glossary" etc. for the <guide> element of the OPF
    - the status bar now shows a message after chapter split operations